--- a/src/bungusland/index.html
+++ b/src/bungusland/index.html
@@ -109,11 +109,11 @@
 <script src="Release/fileloader.js"></script>
 <script>if (!(!Math.fround)) {
   var script = document.createElement('script');
-  script.src = "Release/BungusLand.js";
+  script.src = "Release/bungusland.js";
   document.body.appendChild(script);
 } else {
   var codeXHR = new XMLHttpRequest();
-  codeXHR.open('GET', 'Release/BungusLand.js', true);
+  codeXHR.open('GET', 'Release/bungusland.js', true);
   codeXHR.onload = function() {
     var code = codeXHR.responseText;
     if (!Math.fround) { 
