--- a/public/bungusland/index.html
+++ b/public/bungusland/index.html
@@ -129,7 +129,7 @@
                   <div style="width:224px; height:348px;">
                     <img src="gifs/billy.gif"></img>
                   </div>  
-                  <div>
+                  <div style="width:536px;">
                     <h1 style="margin-top: 40px">Billy Bungus</h1>
                     <p>Billy is the central figure and his 
                     girlfriend is a sea cucumber that he 
@@ -143,7 +143,7 @@
                 </div>
               </div>
               <div class="intro_writeup" >
-                <div>
+                <div style="width:458px;">
                   <h1>Sea Cucumber Girl</h1>
                   <p>Sea Cucumber Girl is Billy’s girlfriend and sidekick. </p>
                   <p>She is very smart and the real brains 
@@ -163,7 +163,7 @@
                 <div style="width:350px; height:383px;">
                   <img src="gifs/professor.gif"></img>
                 </div>  
-                <div>
+                <div style="width:410px;">
                   <h1>Crazy Professor And Bionic Crab</h1>
                   <p>He is a mischievous character whose plans to 
                   dominate Bungusland nearly always backfire.</p> 
@@ -179,7 +179,7 @@
                   <p>He manufactures a drink made of  Sea Cucumber Juice. His bumbling henchman is a ballet  loving Bionic Crab.</p>
               </div>
               <div class="intro_writeup">
-                <div>
+                <div style="width:467px;">
                   <h1>Prawn Paul</h1>
                   <p>Prawn Paul is a rapping prawn. 
                   He is up-beat and positive. He 
@@ -194,7 +194,7 @@
                 <div style="width:357px; height:370px;">
                   <img src="gifs/lobSquitch.gif"></img>
                 </div>
-                <div>
+                <div style="width:343px;">
                   <h1>Lobsquitch</h1>
                   <p>The Lobsquitch is part lobster, 
                   part squid and part ostrich, 
@@ -202,7 +202,7 @@
                 </div>
               </div>
               <div class="intro_writeup">
-                <div>
+                <div style="width:617px;">
                   <h1>Emily Epiglottis And Gwretchin</h1>
                   <p>Emily is Billy’s friend. She is an energetic & lively
                     tomboy who has a romance loving 
@@ -215,9 +215,9 @@
               </div>
               <div class="intro_writeup">
                 <div style="width:274px; height:360px;">
-                  <img src="gifs/emily.gif"></img>
+                  <img src="gifs/gastronaut.gif"></img>
                 </div>
-                <div>
+                <div style="width:486px;">
                   <h1>Gastronaut</h1>
                   <p>He is an overweight astronaut who is  
                     friendly & well-meaning, often caught
@@ -226,7 +226,7 @@
                 </div>
               </div>
               <div class="intro_writeup">
-                <div>
+                <div style="width:565px;">
                   <h1>Tony Dourbain</h1>
                   <p> The arrogant head Chef at the restaurant in 
                     which Billy works. He is always on Billy’s 
@@ -240,14 +240,14 @@
                 <div style="width:376px; height:348px;">
                   <img src="gifs/robowalrus.gif"></img>
                 </div>
-                <div>
+                <div style="width:386px;">
                   <h1>Robot Walrus</h1>
                   <p>Created by the Crazy Professor, he is a 
                     gigantic robotic walrus that always turnsup at the worst moment to cause havoc. </p>
                 </div>
               </div>
               <div class="intro_writeup">
-                <div>
+                <div style="width:510px;">
                   <h1>Aunt Betty</h1>
                   <p>She lives in Bungus Tower. Billy doesn’t 
                     realize that she is the Crazy Professors 
@@ -263,7 +263,7 @@
                 <div style="width:196px; height:368px;">
                   <img src="gifs/captain.gif"></img>
                 </div>
-                <div>
+                <div style="width:564px;">
                   <h1>Captain Climate Change</h1>
                   <p>When he’s in Bungusland Billy has an over-zealous, eco-obsessed super hero alter-ego.</p>
                 </div>
