--- a/public/bungusland/index.html
+++ b/public/bungusland/index.html
@@ -21,21 +21,85 @@
 
   <body class="template">
     <div id="showcase_container" style="display:none;">
+      <div id="showcase_close_btn">X</div>
       <div id="showcase_prev_btn" class="showcase_btn"></div>
       <div id="showcase_next_btn" class="showcase_btn"></div>
       <div id="showcase">
+        <iframe class="vimeo_behind_scenes" src="https://player.vimeo.com/video/149342044?color=e29f9f&title=0&byline=0&portrait=0" width="960" height="800" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         <iframe class="vimeo_video" src="https://player.vimeo.com/video/148967717?color=e29f9f&title=0&byline=0&portrait=0" width="960" height="800" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         <iframe class="vimeo_video" src="https://player.vimeo.com/video/148967713?color=e29f9f&title=0&byline=0&portrait=0" width="960" height="800" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         <iframe class="vimeo_video" src="https://player.vimeo.com/video/148967714?color=e29f9f&title=0&byline=0&portrait=0" width="960" height="800" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         <iframe class="vimeo_video" src="https://player.vimeo.com/video/148967715?color=e29f9f&title=0&byline=0&portrait=0" width="960" height="800" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         <iframe class="vimeo_video" src="https://player.vimeo.com/video/148967716?color=e29f9f&title=0&byline=0&portrait=0" width="960" height="800" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         <iframe class="vimeo_video" src="https://player.vimeo.com/video/148967718?color=e29f9f&title=0&byline=0&portrait=0" width="960" height="800" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        <img class="behind_scenes_image" src="images/behind_scenes-billy_in_mayor_chair.jpg"></img>
-        <img class="behind_scenes_image" src="images/behind_scenes-bungus_figs_blueprint.jpg"></img>
-        <img class="behind_scenes_image" src="images/behind_scenes-bungus_mobile_blueprint.jpg"></img>
-        <img class="behind_scenes_image" src="images/behind_scenes-jazzy_jellyfish_hair.jpg"></img>
-        <img class="behind_scenes_image" src="images/behind_scenes-folio_cover.jpg"></img>
-        <img class="behind_scenes_image" src="images/behind_scenes-sea_cg_bw.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_banner_redux.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_bathroom.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_batter_up.jpeg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_bean_ani_fr_6.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_bg_sacn_blur.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_biggest_bean_image.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_billy_and_friends_in_a_dinghy.png"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_billy_in_mayors_chair.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_billy_live_performance.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_billy_mushroom_tongue.jpeg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_billy_sea_cucumber_girl_clour_scheme.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_billyand_scg_in_front_of_BT.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_bionic_crab_new.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_bus_colored.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_carp_Diem.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_cover_park.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_cracked_mate.jpeg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_crane_bg.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_crazy_prof_lair_bg.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_crazy_prof_mixing.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_crazy_prot_bold_line_shirt.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_cucumber_brain_drill.jpeg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_cucumber_in_peril.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_drums_colored.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_emily_epiglotis_0001.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_emily_epiglottis_new_look.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_find_your_porpoise_new.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_gastronaut_bagel_landing.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_guitar_color.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_IMG_0266.JPG"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_jelly_fish_and_ice_cream_copy.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_just_billy.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_kawaii_bungus.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_keyboard_color.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_laboratory_w_walrus.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_lobsquitch_bold_line.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_logo_character_group_square.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_logo_character_group.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_magellephant.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_map.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_mayors_office.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_meet_the_lobsquitch.jpeg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_merch_stand_colored.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_mobile_001.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_montage.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_New_logo_on_Transparancy.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_New_look_crazy_Prof.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_obese_Billy.jpeg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_pain_in_the_neck_image.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_pep_diab_image.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_prawn_paul_still_wide.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_reac_for_cuc_T_shirt.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_romantic_dinner.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_sc_Juice.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_scG_front_veiw.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_sea_cuc_annie_fr_21.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_sea_cuc_chocs_blu.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_sea_cuc_leg.jpeg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_sea_cuc_robo_suit.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_sea_cuc_t-shirt.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_signing_color.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_suburb.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_sushi_monsters.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_tail_of_a_whale_picture.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_towwer.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_trees.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_vomitus.jpg"></img>
+        <img class="behind_the_scenes_image" src="images/behind_the_scenes_you_are_here.jpeg"></img>
       </div>
     </div>
     <div id="modal" >
@@ -48,6 +112,7 @@
           </div>
         </div>
         <div id="content" class="viewport">
+          <div id="content_close_btn">X</div>
           <div class="overview">
             <div id="videos_pane">
               <h1>Videos</h1>
@@ -275,74 +340,145 @@
               <div id="pdfs">
 
                 <div class="pdf"/>
+                  <a target="_blank" href="pdf/Welcome to Bungusland episode synopsis The Hungry Games.pdf">
+                    <img src="images/pdf_logo_synopsis.png" />
+                    <span>Synopsis: The Hungry Games</span>
+                  </a>
+                </div>
+
+                <div class="pdf"/>
+                  <a target="_blank" href="pdf/Welcome to Bungusland episode synopsis Teryaki Terror.pdf">
+                    <img src="images/pdf_logo_synopsis.png" />
+                    <span>Synopsis: Teryaki Terror</span>
+                  </a>
+                </div>
+
+                <div class="pdf"/>
+                  <a target="_blank" href="pdf/Welcome to Bungusland episode synopsis Stink Floyd.pdf">
+                    <img src="images/pdf_logo_synopsis.png" />
+                    <span>Synopsis: Stink Floyd</span>
+                  </a>
+                </div>
+
+                <div class="pdf"/>
+                  <a target="_blank" href="pdf/Welcome to Bungusland episode synopsis Magellephant.pdf">
+                    <img src="images/pdf_logo_synopsis.png" />
+                    <span>Synopsis: Magellephant</span>
+                  </a>
+                </div>
+
+                <div class="pdf"/>
+                  <a target="_blank" href="pdf/Welcome to Bungusland episode synopsis Las Pepino Diablo.pdf">
+                    <img src="images/pdf_logo_synopsis.png" />
+                    <span>Synopsis: Las Pepino Diablo</span>
+                  </a>
+                </div>
+
+                <div class="pdf"/>
+                  <a target="_blank" href="pdf/Welcome to Bungusland episode synopsis Call Me Fishmael.pdf">
+                    <img src="images/pdf_logo_synopsis.png" />
+                    <span>Synopsis: Call Me Fishmael</span>
+                  </a>
+                </div>
+
+                <div class="pdf"/>
+                  <a target="_blank" href="pdf/Welcome to Bungusland episode synopsis Bean and gone.pdf">
+                    <img src="images/pdf_logo_synopsis.png" />
+                    <span>Synopsis: Bean and Gone</span>
+                  </a>
+                </div>
+
+                <div class="pdf"/>
+                  <a target="_blank" href="pdf/Welcome to Bungusland episode synopsis A Pain in the Neck.pdf">
+                    <img src="images/pdf_logo_synopsis.png" />
+                    <span>Synopsis: A Pain in the Neck</span>
+                  </a>
+                </div>
+
+                <div class="pdf"/>
+                  <a target="_blank" href="pdf/Welcome to Bungusland episode synopsis A New Mayor On Bungus Street.pdf">
+                    <img src="images/pdf_logo_synopsis.png" />
+                    <span>Synopsis: A New Mayor on Bungus Street</span>
+                  </a>
+                </div>
+
+                <div class="pdf"/>
+                  <a target="_blank" href="pdf/Welcome to Bungusland EPISODE 1 4TH DRAFT A New mayor In Bungusland.pdf">
+                    <img src="images/pdf_logo_script.png" />
+                    <span>Script: A New Mayor on Bungus Street</span>
+                  </a>
+                </div>
+
+                <div class="pdf"/>
                   <a target="_blank" href="pdf/Welcome To Bungusland EPISODE Fore Warned is Four Armed 1st draft.pdf">
                     <img src="images/pdf_logo_script.png" />
-                    <span>Fore Warned is Four Armed</span>
+                    <span>Script: Fore Warned is Four Armed</span>
+                  </a>
+                </div>
+
+                <div class="pdf"/>
+                  <a target="_blank" href="pdf/Welcome To Bungusland EPISODE Mist Opportunity 1st draft.pdf">
+                    <img src="images/pdf_logo_script.png" />
+                    <span>Script: Mist Opportunity</span>
                   </a>
                 </div>
 
                 <div class="pdf"/>
                   <a target="_blank" href="pdf/Welcome To Bungusland EPISODE Stuck In Limbo 1st draft.pdf">
                     <img src="images/pdf_logo_script.png" />
-                    <span>Stuck In Limbo</span>
+                    <span>Script: Stuck In Limbo</span>
                   </a>
                 </div>
 
                 <div class="pdf"/>
                   <a target="_blank" href="pdf/Welcome To Bungusland EPISODE The Unicycle Thief.pdf">
                     <img src="images/pdf_logo_script.png" />
-                    <span>The Unicycle Thief</span>
+                    <span>Script: The Unicycle Thief</span>
                   </a>
                 </div>
 
                 <div class="pdf"/>
                   <a target="_blank" href="pdf/Welcome To Bungusland EPISODE Viva Las Vegas 1st draft.pdf">
                     <img src="images/pdf_logo_script.png" />
-                    <span>Viva Las Vegas</span>
+                    <span>Script: Viva Las Vegas</span>
                   </a>
                 </div>
 
                 <div class="pdf"/>
-                  <a target="_blank" href="pdf/William Bungus EPISODE 1 2ND DRAFT A New mayor In Bungusland.pdf">
-                    <img src="images/pdf_logo_script.png" />
-                    <span>A New mayor In Bungusland</span>
+                  <a target="_blank" href="pdf/Robo Walrus storyboards.pdf">
+                    <img src="images/pdf_logo_storyboard.png" />
+                    <span>Storyboard: Viva Las Vegas</span>
                   </a>
                 </div>
 
                 <div class="pdf"/>
-                  <a target="_blank" href="pdf/WILLIAM BUNGUS episode synopsis A New Mayor On Bungus Street.pdf">
-                    <img src="images/pdf_logo_synopsis.png" />
-                    <span>A New Mayor On Bungus Street</span>
+                  <a target="_blank" href="pdf/Storyboard_sea cucumber girl animatic.pdf">
+                    <img src="images/pdf_logo_storyboard.png" />
+                    <span>Storyboard: Sea Cucumber</span>
                   </a>
                 </div>
 
                 <div class="pdf"/>
-                  <a target="_blank" href="pdf/WILLIAM BUNGUS episode synopsis Call Me Fishmael.pdf">
-                    <img src="images/pdf_logo_synopsis.png" />
-                    <span>Call Me Fishmael</span>
+                  <a target="_blank" href="pdf/Storyboard bean and gone.pdf">
+                    <img src="images/pdf_logo_storyboard.png" />
+                    <span>Storyboard: Bean And Gone</span>
                   </a>
                 </div>
 
                 <div class="pdf"/>
-                  <a target="_blank" href="pdf/WILLIAM BUNGUS episode synopsis Las Pepino Diablo.pdf">
-                    <img src="images/pdf_logo_synopsis.png" />
-                    <span>Las Pepino Diablo</span>
+                  <a target="_blank" href="pdf/storyboard bungusland episode the unicycle thief.pdf">
+                    <img src="images/pdf_logo_storyboard.png" />
+                    <span>Storyboard: Unicycle Thief</span>
                   </a>
                 </div>
 
                 <div class="pdf"/>
-                  <a target="_blank" href="pdf/WILLIAM BUNGUS episode synopsis Teryaki Terror.pdf">
-                    <img src="images/pdf_logo_synopsis.png" />
-                    <span>Teryaki Terror</span>
+                  <a target="_blank" href="pdf/Storyboard Bungusland; EP1 new mayor_w notes.pdf">
+                    <img src="images/pdf_logo_storyboard.png" />
+                    <span>Storyboard: New Mayor</span>
                   </a>
                 </div>
 
-                <div class="pdf"/>
-                  <a target="_blank" href="pdf/WILLIAM BUNGUS episode synopsis The Hungry Games.pdf">
-                    <img src="images/pdf_logo_synopsis.png" />
-                    <span>The Hungry Games</span>
-                  </a>
-                </div>
               </div>
               <div id="scripts_pane_footer" class="pane_footer"></div>
             </div>
@@ -350,7 +486,8 @@
         </div>
       </div>
     </div>
-
+    <div id="overlay_logo">
+    </div>
     <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" height="540px" width="960px"></canvas>
     <script type='text/javascript'>
   var Module = {
