--- a/public/bungusland/index.html
+++ b/public/bungusland/index.html
@@ -116,7 +116,7 @@
           <div class="overview">
             <div id="videos_pane">
               <h1>Videos</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo velit, blandit non cursus eu, pellentesque sed nunc. Proin venenatis lacus vitae ipsum faucibus, nec porta massa semper. Morbi ornare.</p>
+              <p>Please click on a thumbnail below to watch the relevant video. These are early pre-production videos created to give a firm idea of the tone and style of the show. To watch fullscreen press the icon on the far right of the video player controls.</p>
               <div id="video_previews">
                 <div class="video_preview" data-vimeo-id="148967717">
                   <img src="images/thumb_robo_walrus.jpg"></img>
@@ -147,7 +147,7 @@
             </div>
             <div id="behindthescenes_pane">
               <h1>Behind The Scenes</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo velit, blandit non cursus eu, pellentesque sed nunc. Proin venenatis lacus vitae ipsum faucibus, nec porta massa semper. Morbi ornare.</p>
+              <p>Choose an option below by clicking on the relevant thumbnail. The behind the scenes video is by Bungusland creator and all round rockstar Simon Knowles. It chronicles the history of Bungusland and also gives a bit of background about the creator. Doodles and drawings contains a collection of random Bungusland images and concepts.</p>
               <div id="behind_the_scenes">
                 <div id="behind_the_scenes_video" class="behind_the_scenes_content">
                     <img src="images/behind_scenes-video_thumb.jpg"></img>
@@ -162,7 +162,7 @@
             </div>
             <div id="music_pane">
               <h1>Music</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo velit, blandit non cursus eu, pellentesque sed nunc. Proin venenatis lacus vitae ipsum faucibus, nec porta massa semper. Morbi ornare.</p>
+              <p>Select a track to listen to, using the Soundcloud player below. There are a lot of amazing tracks so don’t forget to scroll down within the player for more content.</p>
               <div id="music_player">
                 <iframe id="music_widget" width="750" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/174038689%3Fsecret_token%3Ds-7bprN&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
               </div>
@@ -336,7 +336,7 @@
             </div>
             <div id="scriptsandsynopsis_pane">
               <h1>Scripts And Synopsis</h1>    
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo velit, blandit non cursus eu, pellentesque sed nunc. Proin venenatis lacus vitae ipsum faucibus, nec porta massa semper. Morbi ornare.</p>
+              <p>Please click an icon below to download a PDF version of the relevant Script, Synopsis or Storyboard.</p>
               <div id="pdfs">
 
                 <div class="pdf"/>
