--- a/public/biopolis/biopolis.html
+++ b/public/biopolis/biopolis.html
@@ -34,9 +34,9 @@
     <div id="more">
     </div>
 
-    <div id="chloe_character">
-      <video src="content/chloe_looping_flare.mp4" loop autoplay></video>
-    </div>
+    <video id="chloe_character" loop autoplay poster="images/chloe_mobile_still.png">
+      <source src="content/chloe_looping_flare.mp4"></source>    
+    </video>
 
     <div id="music"> 
       <audio autoplay loop>
