--- a/public/biopolis/m.biopolis.html
+++ b/public/biopolis/m.biopolis.html
@@ -34,11 +34,11 @@
     </div>
 
     <div id="music"> 
-      <audio loop>
-         <source src="content/biopolis_groove.aac" type="audio/aac" loop></source>
+      <audio autoplay loop>
+         <source src="content/biopolis_groove.mp3" type="audio/mpeg" loop></source>
       </audio>
     </div>
-
+    
     <div id="chloe_character">
     </div>
 
